syntax = "proto3";

package FIRST;

/// 连接状态,此枚举主要供程序进行识别使用
enum ConnectionStatus
{
	UNINITIALISED = 0;	/// 未初始化
	INITIALIZED = 1;	/// 已经初始化
	DISCONNECTED = 2;	/// 连接已经断开，表示连接过程中遇到情况失败了
	CONNECTING = 3; 	/// 连接中
	CONNECTED = 4;  	/// 连接成功
	AUTHORIZING = 5;	/// 授权中
	AUTHORIED = 6;  	/// 授权成功
	LOGINING = 7;		/// 登录中
	LOGINED = 8;		/// 登录成功
	CONFIRMING = 9; 	/// 结算单确认中
	CONFIRMED = 10;		/// 已经确认
	DOING = 11;			/// 进行中
	DONE = 12;			/// 完成，表示登录的重要过程都完成了，可通知Provider已经连上
	CONNECTION_STATUS_UNKNOWN = 13;		/// 未知，一般不用这个状态
};

// API功能类型，功能可叠加
enum ApiType
{
	NONE = 0;			/// 无
	TRADE = 1;				/// 交易，只下单撤单
	MARKET_DATA = 2;			/// 行情
	LEVEL2 = 4;				///	Level2行情，这是否有保留的必要？
	QUOTE_REQUEST = 8;
	HISTORICAL_DATA = 16;
	INSTRUMENT = 32;
	QUERY = 64;
};

/// 流恢复类型
enum ResumeType
{
    RESUME_TYPE_UNDEFINED = 0;
	RESTART = 1;
	RESUME = 2;
	QUICK = 3;
};

/// 日志记录级别
enum LogLevel
{
	TRACE = 0;
	DEBUG = 1;
	INFO = 2;
	WARN = 3;
	ERROR = 4;
	FATAL = 5;
};

/// 期权类型
enum PutCall
{
        PUTCALL_Undefined = 0;
	PUT = 1;
	CALL = 2;
};

enum OrderStatus
{
        ORDER_STATUS_UNKNOWN = 0;
	NOTSENT = 1;
	PENDING_NEW = 2;
	NEW = 3;
	REJECTED = 4;
	PARTIALLY_FILLED = 5;
	FILLED = 6;
	PENDING_CANCELL = 7;
	CANCELLED = 8;
	EXPIRED = 9;
	PENDING_REPLACE = 10;
	REPLACED = 11;
};

/// 执行类型，与OpenQuant2014中的值一样
/// 一般与OrderStatus对应，但ExecCancelReject与ExecReplaceReject时与OrderStatus不对应
enum ExecType
{
    EXECTYPE_UNKNOWN = 0;
    EXECTYPE_NEW = 1;
    EXECTYPE_STOPPED = 2;
    EXECTYPE_REJECED = 3;
    EXECTYPE_EXPIRED = 4;
    EXECTYPE_TRADE = 5;
    EXECTYPE_PENDING_CANCEL = 6;
    EXECTYPE_CANCELLED = 7;
    EXECTYPE_CANCELL_REJECT = 8;
    EXECTYPE_PENDING_REPLACE = 9;
    EXECTYPE_REPLACE = 10;
    EXECTYPE_REPLACE_REJECT = 11;
    EXECTYPE_TRADE_CORREC = 12;
    EXECTYPE_TRADE_CANCEL = 13;
    EXECTYPE_ORDER_STATUS = 14;
    EXECTYPE_PENDING_NEW = 15;
    EXECTYPE_CLEARING_HOLD = 16;
};

/// 方向
/// 新股申购、回购，质押都暂时不写入，等业务掌握熟了后再加
enum OrderSide
{
        ORDER_SIDE_UNKNOWN = 0;			///
	BUY = 1;
	SELL = 2;
	LOF_CREATION = 3;		///申购,LOF申购
	LOF_REDEMPTION = 4;	///赎回,LOF赎回
	ETF_CREATION = 5;		///ETF申购
	ETF_REDEMPTION = 6;	///ETF赎回
	MERGE = 7;			///合并
	SPLIT = 8;			///拆分
	CB_CONVERT = 9;		///可转债转股，参考于https://en.wikipedia.org/wiki/Convertible_bond
	CB_REDEMPTION = 10;		///可转债回售，参考于https://en.wikipedia.org/wiki/Convertible_bond
        AUTO = 11;
};

/// 报单类型，与OpenQuant2014中的值一样
/// 各交易所的报单指令相当多，实际交易时只取市价和限价两种
enum OrderType
{
        ORDER_TYPE_UNKNOWN = 0;
	MARKET = 1;
	STOP = 2;
	LIMIT = 3;
	STOP_LIMIT = 4;
	MARKET_ON_CLOSE = 5;
	PEGGED = 6;
	TRAILING_STOP = 7;
	TRAILING_STOP_LIMIT = 8;
};

/// TimeInForce，与OpenQuant2014中的值一样
/// 实际只识别IOC和FOK，其它都当成普通类型
enum TimeInForce
{
        TIME_IN_FORCE_UNKNOWN = 0;
	ATC = 1;
	DAY = 2;
	GTC = 3;
	IOC = 4;
	OPG = 5;
	OC = 6;
	FOK = 7;
	GTX = 8;
	GTD = 9;
	GFS = 10;
	AUC = 11;
};

enum BusinessType {
    BUSINESS_TYPE_UNDEFINED = 0;
    FUTURE = 1;
    STOCK = 2;
    OPTION = 3;
}

enum PositionSide {
    POSITION_SIDE_UNKNOWN = 0;
    LONG = 1;
    SHORT = 2;
}

///投机套保标志
enum HedgeFlagType
{
	///投机
	SPECULATION = 0;
	///套利
	ARBITRAGE = 1;
	///套保
	HEDGE = 2;
	///备兑
	COVERED = 3;
	///做市商
	MARKETMAKER = 4;
}

///开平标志，没有提供专门的平昨，而是用Close
enum OpenCloseType
{
    OPEN_CLOSE_TYPE_UNDEFINED = 0;
    OPEN = 1;
    CLOSE = 2;
    CLOSE_TODAY = 3;
};

/// 合约类型，与OpenQuant2014中的值一样
enum InstrumentType
{
        INSTRUMENT_TYPE_UNKNOWN = 0;
	INSTRUMENT_TYPE_STOCK = 1;
	INSTRUMENT_TYPE_FUTURE = 2;
	INSTRUMENT_TYPE_OPTION = 3;
	INSTRUMENT_TYPE_FUTURE_OPTION = 4;
	INSTRUMENT_TYPE_BOND = 5;
	INSTRUMENT_TYPE_FX = 6;
	INSTRUMENT_TYPE_INDEX = 7;
	INSTRUMENT_TYPE_ETF = 8;
	INSTRUMENT_TYPE_MULTI_LEG = 9;
	INSTRUMENT_TYPE_SYNTHETIC = 10;
	INSTRUMENT_TYPE_LOF = 11;		///多加LOF
};

//////////////////////////////////////////////////////////////////////////
/// 证件类型，参考于CTP，去除了一些感觉不大可能用到的类型
/// 一般登录时返回，原计划是对机构账号与个人账号进行区别收费
enum IdCardType
{
	EID = 0;				///组织机构代码
	ID_CARD = 1;			///中国公民身份证
	PASSPORT = 2;		///护照
	LICENSE_NO = 3;		///营业执照号
	TAX_NO = 4;			///税务登记号/当地纳税ID
	DRIVING_LICENSE = 5;	///驾照
	SOCIAL_ID = 6;		///当地社保ID
	LOCAL_ID = 7;			///当地身份证
	OTHER_CARD = 8;		///其他证件
};

/// 交易所类型，按交易所官网的缩写决定
/// 例如：
/// 上交所有SH(国内网站)/SS(Yahoo)/SSE(LTS)/SHA(Google)
/// 深交所有SZ(国内网站)/SZE(LTS)/SZSE(官网)
/// 港交所有HK(国内网站)/HKEx(官网)
enum ExchangeType
{
	EXCHANGETYPE_UNDEFINED = 0;	/// 未定义
	SHFE = 1;			/// 上期所
	DCE = 2;			/// 大商所
	CZCE = 3;			/// 郑商所
	CFFEX = 4;		/// 中金所
	INE = 5;			/// 能源中心
	SSE = 6;			/// 上交所
	SZSE = 7;			/// 深交所
	SGE = 8;			/// 上海黄金交易所
	NEEQ = 9;			/// 全国中小企业股份转让系统,三板
	HKEx = 10;			/// 港交所
};


///合约生命周期状态类型
enum InstLifePhaseType
{
        InstLifePhaseType_Unknown = 0;
	InstLifePhaseType_NotStart = 1;		///未上市
	InstLifePhaseType_Started = 2;		///上市
	InstLifePhaseType_Pause = 3;		///停牌
	InstLifePhaseType_Expired = 4;	///到期

	InstLifePhaseType_Issue = 5;		///发行,参考于XSpeed
	InstLifePhaseType_FirstList = 6;	///首日上市,参考于XSpeed
	InstLifePhaseType_UnList = 7;		///退市,参考于XSpeed
};

///交易阶段类型
enum TradingPhaseType
{
        TradingPhaseType_Unknown = 0;
	TradingPhaseType_BeforeTrading = 1;		///开盘前
	TradingPhaseType_NoTrading = 2;		///非交易
	TradingPhaseType_Continuous = 3;		///连续交易
	TradingPhaseType_AuctionOrdering = 4;	///集合竞价报单
	TradingPhaseType_AuctionBalance = 5;	///集合竞价价格平衡
	TradingPhaseType_AuctionMatch = 6;		///集合竞价撮合
	TradingPhaseType_Closed = 7;			///收盘
	TradingPhaseType_Suspension = 8;		///停牌时段,参考于LTS
	TradingPhaseType_Fuse = 9;				///熔断时段,参考于LTS
};

